--- a/src/main/resources/templates/style.css
+++ b/src/main/resources/templates/style.css
@@ -1,34 +1,164 @@
 #background {
     position: relative;
-    width: 1728px;
-    height: 1117px;
+    height: 100vh;
     background: linear-gradient(112.68deg, #FF0084 0%, #B9FFCB 100%);
 }
-#container2{
-    position: relative;
-    width: 1728px;
-    height: 50px;
-    left: 0%;
-    right: 0%;
-    top: -10px;
-
-    background: #FFFFFF;
+body{
+    overflow: hidden;
 }
-#container{
-    position: relative;
-    width: 1728px;
-    height: 1117px;
-
-    background: linear-gradient(112.68deg, #EAA8C8 0%, #B9FFCB 100%);
-}
-#navbar{
+#rectangle2{
     position: absolute;
     left: 0%;
     right: 0%;
-    top: 0%;
-    width: 1728px;
-    bottom: 93.82%;
+    top: -1%;
+    bottom: 96%;
+    width: 100%;
+    height: 9%;
 
     background: #FFFFFF;
-    border-radius: 87px;
+    border-radius: 0px 0px 70px 70px;
+}
+#text{
+    position: absolute;
+    left: 37.5%;
+    right: 33%;
+    top: -0.1%;
+    bottom: 90.33%;
+
+    font-family: "Playfair Display";
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 48px;
+    line-height: 100%;
+    /* or 48px */
+
+    text-align: center;
+
+    color: #090909;
+}
+#logo01{
+    position: absolute;
+    left: 37.7%;
+    right: 56.66%;
+    top: -1%;
+    bottom: 90%;
+
+    /*background: url(logov1-01.png);*/
+}
+#guy{
+    position: absolute;
+    top:20%;
+    width: 80%;
+    right:14%;
+    height: 55%;
+}
+#girl{
+    position: absolute;
+    left: 50.84%;
+    right: 37.22%;
+    top: 20%;
+    bottom: 22.41%;
+    height: 55%;
+}
+#logo02{
+    position: absolute;
+    left: -0.5%;
+    right: 58.8%;
+    top: 27%;
+    bottom: -11.91%;
+    height: auto;
+    width: 40%;
+    /*width: 1020px;*/
+    /*height: 766px;*/
+    /*left: -297px;*/
+    /*bottom: -133px;*/
+
+    /*background: url(logov2-01 1.svg);*/
+}
+#login {
+    position: absolute;
+    width: 176px;
+    height: 100px;
+    left: 1442px;
+    top: 210px;
+    margin-left: -8%;
+
+    font-family: Khula;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 72px;
+    line-height: 100%;
+    /* or 72px */
+
+    text-align: center;
+
+    color: #000000;
+}
+#image1{
+    position: absolute;
+    left: 72%;
+    right: 2.66%;
+    top: 37%;
+    bottom: 51.39%;
+    height: 14%;
+
+    background: url(image.png);
+}
+#image2{
+    position: absolute;
+    left: 72%;
+    right: 2.62%;
+    top: 37.5%;
+    bottom: 50.49%;
+    height: 14%;
+
+    background: url(image.png);
+}
+#LeftFullArmGuy{
+    animation: handMove 1s infinite alternate ease-in-out;
+    transform-origin: top;
+    transform-box: fill-box;
+}
+
+@keyframes handMove{
+    from{
+        transform: rotateZ(-6deg);
+    }
+    to{
+        transform: rotateZ(6deg);
+    }
+}
+#HeadMan{
+    animation: handMove 1s infinite alternate ease-in-out;
+    transform-origin: bottom;
+    transform-box: fill-box;
+}
+
+@keyframes handMove{
+    from{
+        transform: rotateZ(-6deg);
+    }
+    to{
+        transform: rotateZ(6deg);
+    }
+}
+#HeadGirl{
+    animation: headMove 1s infinite alternate ease-in-out;
+    transform-origin: bottom;
+    transform-box: fill-box;
+}
+
+@keyframes headMove{
+    from{
+        transform: rotateZ(20deg);
+    }
+    to{
+        transform: rotateZ(-10deg);
+    }
+}
+#container{
+    position: relative;
+    height: 100vh;
+
+    background: linear-gradient(112.68deg, #EAA8C8 0%, #B9FFCB 100%);
 }
