--- a/src/main/resources/templates/style.css
+++ b/src/main/resources/templates/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: "Open Sans";
+    src: url("./PlayfairDisplay-VariableFont_wght.ttf") format("tff")
+}
+
+body{
+    margin: 0;
+}
+
 #background {
     position: relative;
     height: 100vh;
@@ -10,10 +19,9 @@ body{
     position: absolute;
     left: 0%;
     right: 0%;
-    top: -1%;
-    bottom: 96%;
+
     width: 100%;
-    height: 9%;
+    height: 70px;
 
     background: #FFFFFF;
     border-radius: 0px 0px 70px 70px;
@@ -22,10 +30,10 @@ body{
     position: absolute;
     left: 37.5%;
     right: 33%;
-    top: -0.1%;
+    top: 2px;
     bottom: 90.33%;
 
-    font-family: "Playfair Display";
+    font-family: "Playfair Display", serif;
     font-style: normal;
     font-weight: bolder;
     font-size: 48px;
@@ -38,12 +46,17 @@ body{
 }
 #logo01{
     position: absolute;
-    left: 37.7%;
+    left: 36.7%;
     right: 56.66%;
-    top: -1%;
+    top: -2px;
     bottom: 90%;
 
     /*background: url(logov1-01.png);*/
+}
+@media only screen and (max-width: 1440px) {
+    #logo01 {
+        left: 30%
+    }
 }
 #guy{
     position: absolute;
@@ -60,20 +73,17 @@ body{
     bottom: 22.41%;
     height: 55%;
 }
-#logo02{
+#logoBottom{
     position: absolute;
-    left: -0.5%;
-    right: 58.8%;
-    top: 27%;
-    bottom: -11.91%;
+    left: -24%;
+    bottom: -120px;
     height: auto;
-    width: 40%;
+    width: 70%;
     /*width: 1020px;*/
     /*height: 766px;*/
     /*left: -297px;*/
     /*bottom: -133px;*/
 
-    /*background: url(logov2-01 1.svg);*/
 }
 #login {
     position: absolute;
@@ -94,7 +104,7 @@ body{
 
     color: #000000;
 }
-#image1{
+#spotifyGreen{
     position: absolute;
     left: 72%;
     right: 2.66%;
@@ -102,9 +112,8 @@ body{
     bottom: 51.39%;
     height: 14%;
 
-    background: url(image.png);
 }
-#image2{
+#spotifyBlack{
     position: absolute;
     left: 72%;
     right: 2.62%;
@@ -112,7 +121,7 @@ body{
     bottom: 50.49%;
     height: 14%;
 
-    background: url(image.png);
+
 }
 #LeftFullArmGuy{
     animation: handMove 1s infinite alternate ease-in-out;
@@ -160,5 +169,6 @@ body{
     position: relative;
     height: 100vh;
 
-    background: linear-gradient(112.68deg, #EAA8C8 0%, #B9FFCB 100%);
+    background: radial-gradient(50% 119.66% at 50% 50%, rgba(255, 0, 132, 0) 0%, rgba(250, 250, 250, 0.697917) 27.08%, rgba(255, 155, 206, 0.625676) 33.31%, rgba(255, 157, 207, 0.635417) 33.32%, rgba(231, 19, 45, 0.666667) 33.33%, #00FF42 38.02%, rgba(210, 255, 31, 0.848868) 52.08%, rgba(47, 93, 255, 0.75441) 55.21%, #EAA8C8 64.58%, #D3D0CA 72.92%);
 }
+    /*background: linear-gradient(112.68deg, rgba(255, 0, 132, 0) 0%, #EAA8C8 0.01%, #B9FFCB 100%);}*/
