Border-radius on navbar

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -18,4 +18,7 @@
 
 #navbar{
     background: #191414 !important;
+    border-bottom-left-radius: 40px !important;
+    border-bottom-right-radius: 40px !important;
+
 }
