--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -11,14 +11,14 @@
 </head>
 
 
-<body>
+<body id="welcomePageBackground">
 <header th:replace="fragments/navbar.html"/>
 
 <!--<p>-->
 <!--    <span th:text="${hello}">Hello!</span>-->
 <!--</p>-->
-<p>Inside Html page</p>
-<p>Login to spotify</p>
-<a href="https://accounts.spotify.com/authorize/?scope=user-read-private playlist-read-private playlist-modify-public user-library-read user-read-recently-played streaming app-remote-control&response_type=code&redirect_uri=http://localhost:8080/index/responseFromSpotify&client_id=96faf0542a934748ab800dae8f474e70">click here to redirect to Spotify Web App (where you would authorize this application to get a token to interact with spotify on your behalf)</a>
+<!--<p>Inside Html page</p>-->
+<!--<p>Login to spotify</p>-->
+<!--<a href="https://accounts.spotify.com/authorize/?scope=user-read-private playlist-read-private playlist-modify-public user-library-read user-read-recently-played streaming app-remote-control&response_type=code&redirect_uri=http://localhost:8080/index/responseFromSpotify&client_id=96faf0542a934748ab800dae8f474e70">click here to redirect to Spotify Web App (where you would authorize this application to get a token to interact with spotify on your behalf)</a>-->
 </body>
 </html>
