--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -22,3 +22,17 @@
     border-bottom-right-radius: 40px !important;
 
 }
+#welcomePageBackground{
+    background: url("Vector.svg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    height: 500px;
+    width: 500px;
+    background-color: #191414;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px 3px rgba(0,0,0,.5);
+}
