--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -13,7 +13,14 @@
 
 <body id="welcomePageBackground">
 <header th:replace="fragments/navbar.html"/>
-
+<div id="LoginWithText">
+    Login with
+<div id="login">
+    <a th:href="@{https://accounts.spotify.com/authorize/?scope=user-read-private playlist-read-private playlist-modify-public user-library-read user-read-recently-played streaming app-remote-control&response_type=code&redirect_uri=http://localhost:8080/index/responseFromSpotify&client_id=96faf0542a934748ab800dae8f474e70}">
+    <img id="test" th:src="@{/SpotifyWhite.png}" style="width: 400px" />
+    </a>
+</div>
+</div>
 <!--<p>-->
 <!--    <span th:text="${hello}">Hello!</span>-->
 <!--</p>-->
