breakup of login and with

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -16,7 +16,9 @@
 <div class="d-flex align-items-center justify-content-center">
 <a id="login" class="position-absolute" href="#" >
     <div class="row" id="login-with-text">
-        <span id="login-text">Login with</span>
+        <span id="login-text">Login</span>
+        <br>
+        <span style="font-size: 32px">with</span>
     </div>
     <div class="row">
         <img id="login-img" class="row" th:src="@{/Spotify_Logo_RGB_White.png}"   alt="...">
