--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -23,8 +23,9 @@
 
 }
 #welcomePageBackground{
-    background: url("Vector.svg") no-repeat center center fixed;
-    background-size: contain;
+    overflow: auto;
+    background: url("logospotifychill-01.svg") no-repeat center center fixed;
+    background-size: cover;
 
     background-color: #191414;
     color: #fff;
@@ -35,13 +36,19 @@
 
 #login{
     pointer-events: auto;
-    top: 43%;
+
+    position: fixed;
+    top: 55%;
+    left: 50%;
     font-family: MuseoModerno, serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 48px;
+    font-size: 30px;
     line-height: 100%;
     color: white;
+
+    transform: translate(-50%, -50%);
+
 }
 
 
@@ -53,10 +60,10 @@
 
 @keyframes welcomeLogo {
     from{
-        background-size: 52%;
+        background-size: 100%;
     }
     to{
-        background-size: 60%;
+        background-size: 120%;
     }
 }
 
@@ -64,7 +71,7 @@
 
 
 #login-img{
-    width: 400px;
+    width: 200px;
 }
 #login-with-text{
     display: block !important;
