About us started and bug about navbar fixed
the link of bootstrap that is used for navbar was in the welcome html, not in the header fragment, fixed

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -3,6 +3,28 @@
     src: url("MuseoModerno-VariableFont_wght.ttf");
 }
 
+#BasicBackground{
+    background: #191414;
+}
+
+#headers{
+    position: absolute;
+    width: 289px;
+    height: 64px;
+    left: 720px;
+    top: 142px;
+
+    font-family: MuseoModerno, serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 64px;
+    line-height: 100%;
+    /* identical to box height, or 64px */
+
+    text-align: center;
+    text-transform: capitalize;
+}
+
 #logo{
     font-family: MuseoModerno, serif;
     font-style: normal;
