--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -2,20 +2,88 @@
     font-family: MuseoModerno;
     src: url("MuseoModerno-VariableFont_wght.ttf");
 }
+* {
+    box-sizing: border-box;
+}
+@media screen and (max-width: 600px) {
+    .AdminProfileDiv {
+        width: 100% !important;
+    }
+    .BioLabel{
+        width: 100% !important;
+    }
+}
+.BioLabel{
+    width: 400px;
+    height: 100px;
+    background: white;
+    font-size: 32px;
+    font-family: MuseoModerno, serif;
+    border: #1cb398 5px solid;
+    margin: auto;
+}
 
 #BasicBackground{
     background: #191414;
 }
 
-#headers{
-    position: absolute;
-    width: 289px;
-    height: 64px;
-    left: 720px;
-    top: 142px;
-
+.icons {
+    padding-top: 5%;
+    width: 350px;
+    height: 100px;
+    margin: auto;
+}
+.icon{
+    width: 60px;
+    height: 60px;
+    padding: 2%;
+}
+.facebooklogo{
+    width: 70px;
+    height: 70px;
+    padding: 2%;
+}
+.AdminProfileDiv{
+    padding-top: 5%;
+    width: 33.33%;
+    height: 800px;
+    background: #191414;
+    float: left;
+}
+#ProfilesRow:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+.UsernameTextHeader{
+    padding-top: 3%;
     font-family: MuseoModerno, serif;
     font-style: normal;
+    color: #1cb398;
+    font-weight: 500;
+    font-size: 48px;
+    text-align: center;
+
+}
+
+.RoundedImage{
+    border-radius: 50%;
+    width: 270px;
+    height: 270px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: center;
+}
+
+#headers{
+
+    width: 100%;
+    position: relative;
+    padding-top: 3%;
+    font-family: MuseoModerno, serif;
+    font-style: normal;
+    color: #1cb398;
     font-weight: 500;
     font-size: 64px;
     line-height: 100%;
@@ -95,7 +163,7 @@
 #login-img{
     width: 200px;
 }
-#login-with-text{
+#login-with-text {
     display: block !important;
 }
 
