--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -8,6 +8,7 @@
 <body id="BasicBackground">
 <header th:replace="fragments/navbar.html"/>
 <h1 id="headers">About Us</h1>
+<div d-flex justify-content-around bd-highlight>
 <div class="AdminProfileDiv">
     <div class="ImageProfiles">
         <img th:src="@{/Mimz1.jpeg}" class="RoundedImage">
@@ -32,7 +33,7 @@
         <img th:src="@{/Marko1.png}" class="RoundedImage">
         <h2 class="UsernameTextHeader">Marko</h2>
         <p class="BioLabel">Smisli si bio</p>
-        <div class="icons">
+        <div class="iconsMarko">
             <a th:href="@{https://open.spotify.com/user/77d7qf5fg2av5zhvrcbs9f0nv?si=720cf738398b4828}">
             <img th:src="Spotify_Icon_RGB_White.png" class="icon">
             </a>
@@ -58,6 +59,7 @@
             <img th:src="linkedin-logo.png" class="icon">
         </div>
     </div>
+</div>
 </div>
 </body>
 </html>
