--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -89,9 +89,6 @@
     }
 }
 
-
-
-
 #login-img{
     width: 200px;
 }
@@ -103,3 +100,56 @@
 /*    //top: -7px!important;*/
 /*    position: relative!important;*/
 /*}*/
+#LogOutText{
+    position: fixed;
+    left:92%;
+    top:2%;
+    height: 100%;
+    color: white;
+    font-family: MuseoModerno;
+    font-size: 27px;
+}
+.MainPage{
+    margin:auto;
+    width: 100%;
+}
+
+#UsernamePicture{
+    border-radius: 50%;
+    outline: solid rgba(28, 179, 152, 0.25) 2px;
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin-left:auto;
+    margin-right: auto;
+    position: relative;
+    z-index: 0;
+    background-color: white;
+}
+#UsernameText{
+    font-family: MuseoModerno;
+    font-size: 33px;
+    text-align: center;
+    color: white;
+}
+#FollowersText{
+    font-family: MuseoModerno;
+    font-size: 20px;
+    text-align: center;
+    color: white;
+}
+.icons {
+    width: 125px;
+    height: 90px;
+    margin: auto;
+}
+.icon{
+    width: 50px;
+    height: 50px;
+    padding: 2%;
+}
+.facebooklogo{
+    width: 60px;
+    height: 60px;
+    padding: 2%;
+}
