Bag fixes and merging about us page

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -236,17 +236,17 @@
     text-align: center;
     color: white;
 }
-.icons {
+.iconsProfilePage {
     width: 125px;
     height: 90px;
     margin: auto;
 }
-.icon{
+.iconProfilePage{
     width: 50px;
     height: 50px;
     padding: 2%;
 }
-.facebooklogo{
+.facebooklogoPage{
     width: 60px;
     height: 60px;
     padding: 2%;
