--- a/src/main/resources/templates/usernamePage.html
+++ b/src/main/resources/templates/usernamePage.html
@@ -12,9 +12,9 @@
         <div id="UsernamePicture"></div>
         <h2 id="UsernameText">Username</h2>
         <h3 id="FollowersText">Followers, Following</h3>
-        <div class="icons">
-            <img th:src="@{/facebook-logo.png}" class="facebooklogo"/>
-            <img th:src="@{/instagram-logo.png}" class="icon"/>
+        <div class="iconsProfilePage">
+            <img th:src="@{/FacebookLogoBlue.png}" class="facebooklogoPage"/>
+            <img th:src="@{/InstagramLogoBlue.png}" class="iconProfilePage"/>
         </div>
     </div>
 </div>
