--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -10,10 +10,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
-
-<body id="welcomePageBackground">
 <header th:replace="fragments/navbar.html"/>
-<div class="d-flex align-items-center justify-content-center">
+<body id="welcomePageBackground">
+
+<div id="wrapper">
 <a id="login" class="position-absolute" th:href="@{https://accounts.spotify.com/authorize/?scope=user-read-private playlist-read-private playlist-modify-public user-library-read user-read-recently-played streaming app-remote-control&response_type=code&redirect_uri=http://localhost:8080/index/responseFromSpotify&client_id=96faf0542a934748ab800dae8f474e70}" >
     <div class="row" id="login-with-text">
         <span id="login-text">Login</span>
@@ -24,6 +24,8 @@
         <img id="login-img" class="row" th:src="@{/Spotify_Logo_RGB_White.png}"   alt="...">
     </div>
 </a>
+
+<img id="background" th:src="@{/Vector.svg}"></img>
 </div>
 <!--<p>-->
 <!--    <span th:text="${hello}">Hello!</span>-->
