--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -5,6 +5,29 @@
 * {
     box-sizing: border-box;
 }
+
+
+/* Tooltip text */
+#logo .tooltiptext {
+    visibility: hidden;
+    top: 100%; /* At the bottom of the tooltip */
+    width: 120px;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    font-size: 20px;
+
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+#logo:hover .tooltiptext {
+    visibility: visible;
+
+}
 @media screen and (max-width: 1000px) {
     .AdminProfileDiv {
         width: 100% !important;
