--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,9 +1,10 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <nav id="navbar" class="navbar navbar-dark" style="background: #191414" >
   <div class="container-fluid" >
-    <a id="logo" class="navbar-brand mx-auto"  href="#" >
+    <a id="logo" class="navbar-brand mx-auto"  th:href="@{aboutUs}">
       <img th:src="@{/logo-navbar.svg}" alt="" class="d-inline-block align-text-top">
       <span id="logo-text">Spotify & Chill</span>
+      <span class="tooltiptext">Learn more about us</span>
     </a>
   </div>
 </nav>
