--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -16,12 +16,12 @@
     </div>
 </nav>
 <h1 id="headers">About Us</h1>
+<h2 class="DevHeader">Development</h2>
 <div d-flex justify-content-around bd-highlight>
 <div class="AdminProfileDiv">
     <div class="ImageProfiles">
         <img th:src="@{/Mimz1.jpeg}" class="RoundedImage">
         <h2 class="UsernameTextHeader">Mimz</h2>
-        <p class="BioLabel">Smisli si bio</p>
         <div class="icons">
             <a th:href="@{https://open.spotify.com/user/6uyn8ljlhyn01knaq3a1mtvdy?si=05c242b25f7343e0}">
                 <img th:src="Spotify_Icon_RGB_White.png" class="icon">
@@ -40,7 +40,6 @@
     <div class="ImageProfiles">
         <img th:src="@{/Marko1.png}" class="RoundedImage">
         <h2 class="UsernameTextHeader">Marko</h2>
-        <p class="BioLabel">Smisli si bio</p>
         <div class="iconsMarko">
             <a th:href="@{https://open.spotify.com/user/77d7qf5fg2av5zhvrcbs9f0nv?si=720cf738398b4828}">
             <img th:src="Spotify_Icon_RGB_White.png" class="icon">
@@ -55,7 +54,6 @@
     <div class="ImageProfiles">
         <img th:src="@{/Jovana1.png}" class="RoundedImage">
         <h2 class="UsernameTextHeader">Jovana</h2>
-        <p class="BioLabel">Smisli si bio</p>
         <div class="icons">
             <img th:src="Spotify_Icon_RGB_White.png" class="icon">
             <a th:href="@{https://www.facebook.com/jovana.krstevska.5}">
@@ -68,6 +66,25 @@
         </div>
     </div>
 </div>
+    <div id="AdminProfileDiv" style="width: 100%">
+        <h2 class="DesignHeader">Design</h2>
+        <div class="ImageProfiles">
+            <img th:src="@{/Deki.jpeg}" class="RoundedImage">
+            <h2 class="UsernameTextHeader">Dejan</h2>
+            <div id="dekiicon">
+                <a th:href="@{https://open.spotify.com/user/92yfbpjxl5tqkn53wn1rjw6in?si=tl3QeODWTsqTsojp5pe50A&utm_source=copy-link}">
+                    <img th:src="Spotify_Icon_RGB_White.png" class="icon">
+                </a>
+                <a th:href="@{https://www.facebook.com/dejanichev}">
+                    <img th:src="facebook-logo.png" class="facebooklogo">
+                </a>
+                <a th:href="@{https://www.instagram.com/_escaperope_/}">
+                    <img th:src="instagram-logo.png" id="icon">
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
+
 </body>
 </html>
