--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -11,7 +11,7 @@
 </head>
 
 
-<body id="welcomePageBackground">
+<body id="welcomePageBackground"  style="background-color: black">
 <header th:replace="fragments/navbar.html"/>
 <div class="d-flex align-items-center justify-content-center">
 <a id="login" class="position-absolute" th:href="@{https://accounts.spotify.com/authorize/?scope=user-read-private playlist-read-private playlist-modify-public user-library-read user-read-recently-played streaming app-remote-control&response_type=code&redirect_uri=http://localhost:8080/index/responseFromSpotify&client_id=96faf0542a934748ab800dae8f474e70}" >
