--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -201,10 +201,12 @@
 #LogOutText{
     position: fixed;
     left:92%;
-    top:2%;
+    top:3%;
+    margin-top: 2px;
+    margin-right: 5px;
     height: 100%;
     color: white;
-    font-family: MuseoModerno;
+    font-family: MuseoModerno, serif;
     font-size: 27px;
 }
 .MainPage{
@@ -220,18 +222,19 @@
     display: block;
     margin-left:auto;
     margin-right: auto;
+    margin-top: 15px;
     position: relative;
     z-index: 0;
     background-color: white;
 }
 #UsernameText{
-    font-family: MuseoModerno;
+    font-family: MuseoModerno, serif;
     font-size: 33px;
     text-align: center;
-    color: white;
+    color: #1CB398;
 }
 #FollowersText{
-    font-family: MuseoModerno;
+    font-family: MuseoModerno, serif;
     font-size: 20px;
     text-align: center;
     color: white;
@@ -250,4 +253,113 @@
     width: 60px;
     height: 60px;
     padding: 2%;
+}
+/*.ButtonsText{*/
+/*    width: 500px;*/
+/*    margin:auto;*/
+/*}*/
+/*.Element{*/
+/*    position: relative;*/
+/*    width: 100%;*/
+/*    height: 200px;*/
+/*    float: left;*/
+/*    display: inline;*/
+/*    font-family: MuseoModerno, serif;*/
+/*    color: white;*/
+/*}*/
+.TheUserNavbar {
+    display: inline;
+    position: relative;
+    left: 26%;
+    width: 49%;
+    height: 30%;
+    border-bottom: groove;
+    border-inline: white;
+}
+.UserNavbar{
+    display: inline;
+    font-family: MuseoModerno, serif;
+    font-size: 35px;
+    color:white;
+    width: 23%;
+    height: 40px;
+    padding-right: 50px;
+    padding-left: 20px;
+}
+.UserTop5Artists{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-flow: wrap;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 22px;
+}
+.TopArtist{
+    border-radius: 50%;
+    outline: solid rgba(28, 179, 152, 0.25) 2px;
+    width: 150px;
+    height: 150px;
+    font-family: MuseoModerno, serif;
+    color: white;
+    background-color: white;
+    padding: 5%;
+    margin: 2%;
+}
+.ArtistsName{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-flow: wrap;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 20px;
+}
+.NameArtist{
+    font-family: MuseoModerno, serif;
+    font-size: 20px;
+    color: white;
+}
+@media screen and (max-width: 1200px) {
+
+    .UserNavbar{
+        display: inline !important;
+        width: 25% !important;
+        height: 40px !important;
+        font-size: 30px !important;
+        align-items: center !important;
+    }
+}
+@media screen and (max-width: 1000px) {
+
+    .UserNavbar{
+        display: inline !important;
+        width: 25% !important;
+        height: 40px !important;
+        font-size: 25px !important;
+    }
+}
+@media screen and (max-width: 700px) {
+
+    .UserNavbar{
+        display: inline !important;
+        width: 25% !important;
+        height: 40px !important;
+        font-size: 20px !important;
+    }
+}
+@media screen and (max-width: 200px) {
+
+    .UserNavbar{
+        display: inline !important;
+        width: 25% !important;
+        height: 40px !important;
+        font-size: 15px !important;
+    }
+}
+@media screen and (max-width: 1200px) {
+    .Top5Artists{
+        width: 40% !important;
+        margin-top: 30px !important;
+    }
 }
