--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+#CDimage{
+    width: 500px;
+    height: 500px;
+}
+
 #AdminProfileDivDesign{
 
     padding-top: 5%;
@@ -15,7 +20,6 @@
     margin: auto;
 
 }
-
 
 /* Tooltip text */
 #logo .tooltiptext {
@@ -227,6 +231,17 @@
     color: #fff;
     text-align: center;
     text-shadow: 0 1px 3px rgba(0,0,0,.5);
+}
+
+#backgroundError{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    object-fit: cover;
+    width: 500px;
+    height: 500px;
+    transform: translate(-50%, -50%);
+
 }
 
 #background{
