--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -66,24 +66,26 @@
         </div>
     </div>
 </div>
-    <h2 class="DesignHeader">Design</h2>
-    <div id="AdminProfileDiv" style="width: 100%">
-        <div class="ImageProfiles">
-            <img th:src="@{/Deki.jpeg}" class="RoundedImage">
-            <h2 class="UsernameTextHeader">Dejan</h2>
-            <div id="dekiicon">
-                <a th:href="@{https://open.spotify.com/user/92yfbpjxl5tqkn53wn1rjw6in?si=tl3QeODWTsqTsojp5pe50A&utm_source=copy-link}">
-                    <img th:src="Spotify_Icon_RGB_White.png" class="icon">
-                </a>
-                <a th:href="@{https://www.facebook.com/dejanichev}">
-                    <img th:src="facebook-logo.png" class="facebooklogo">
-                </a>
-                <a th:href="@{https://www.instagram.com/_escaperope_/}">
-                    <img th:src="instagram-logo.png" id="icon">
-                </a>
-            </div>
+</div>
+<h2 class="DesignHeader">Design</h2>
+<div d-flex justify-content-around bd-highlight>
+<div id="AdminProfileDiv" style="width: 100%">
+    <div class="ImageProfiles">
+        <img th:src="@{/Deki.jpeg}" class="RoundedImage">
+        <h2 class="UsernameTextHeader">Dejan</h2>
+        <div id="dekiicon">
+            <a th:href="@{https://open.spotify.com/user/92yfbpjxl5tqkn53wn1rjw6in?si=tl3QeODWTsqTsojp5pe50A&utm_source=copy-link}">
+                <img th:src="Spotify_Icon_RGB_White.png" class="icon">
+            </a>
+            <a th:href="@{https://www.facebook.com/dejanichev}">
+                <img th:src="facebook-logo.png" class="facebooklogo">
+            </a>
+            <a th:href="@{https://www.instagram.com/_escaperope_/}">
+                <img th:src="instagram-logo.png" id="icon">
+            </a>
         </div>
     </div>
+</div>
 </div>
 
 </body>
