--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -119,7 +119,9 @@
     text-align: center;
 
 }
-
+.navigacija:active{
+    text-decoration-line: underline;
+}
 
 
 .RoundedImage{
@@ -201,6 +203,10 @@
 
     text-align: center;
     text-transform: capitalize;
+}
+#logout{
+    font-family: MuseoModerno, serif !important;
+
 }
 
 #logo{
