--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/style.css}" />
 </head>
@@ -13,32 +16,75 @@
             <img th:src="@{/logo-navbar.svg}" alt="" class="d-inline-block align-text-top">
             <span id="logo-text">Spotify & Chill</span>
         </a>
+        <a id="logout" class="navbar nav ms-auto text-center pt-0 pb-0 text-light fs-3" style="font-family: MuseoModerno" href="#" >Logout</a>
     </div>
 </nav>
 <header class="text-center mx-auto">
     <img th:src="${session.user.imageUrl}" class="RoundedImage" id="profilePicture">
     <p th:text="${session.user.displayName}" id="profileName" class="UsernameTextHeader"></p>
+    <nav class="nav justify-content-center" >
+        <a class="nav-link">
+            <i class="bi bi-facebook" style="color: #1cb398"></i>
+        </a>
+        <a class="nav-link">
+            <i class="bi bi-spotify" style="color: #1cb398"></i>
+        </a>
+        <a class="nav-link">
+            <i class="bi bi-instagram" style="color: #1cb398"></i>
+        </a>
+    </nav>
 
 </header>
-<div class="navbar navbar-expand-lg">
-    <ul class="profileButtons text-light text-center mx-auto nav" style="list-style: none">
-        <li class="nav-item"><input type="button" value="Artists"></li>
-        <li class="nav-item"><input type="button" value="Albums"></li>
-        <li class="nav-item"><input type="button" value="Playlists"></li>
-    </ul>
-</div>
-<div class="container">
+<nav class="nav nav-pills mx-auto bg-black justify-content-center">
+
+    <a class="nav-link ps-5 pe-5 fs-3 text-light navigacija" style="font-family: MuseoModerno" value="Artists" href="#" onclick="checkSelected('Artists')">Artists</a>
+    <a class="nav-link ps-5 pe-5 fs-3 text-light navigacija" style="font-family: MuseoModerno" value="Albums" href="#" onclick="checkSelected('Albums')">Albums</a>
+    <a class="nav-link ps-5 pe-5 fs-3 text-light navigacija" style="font-family: MuseoModerno" value="Playlists" href="#" onclick="checkSelected('Playlists')">Playlist</a>
+
+</nav>
+<div class="container pt-5 navDivs" id="artistsContainer">
     <div class="column mx-auto">
         <div class="row mx-auto" id="artists">
             <ul th:each="artist : ${session.user.artists}" style="list-style: none" class="mx-auto">
-                <li class="mx-auto"><p th:text="${artist.name}"></p></li>
                 <li class="mx-auto"><img th:src="${artist.imageUrl}" class="RoundedImage"></li>
+                <li style="font-family: MuseoModerno" class="mx-auto text-light text-center pt-3"><p th:text="${artist.name}"></p></li>
             </ul>
         </div>
     </div>
 </div>
-<div id="playlists">
-    <input type="button" value="Create Playlist"></input>
+<div style="display: none" class="container navDivs" id="albumsContainer">
+
 </div>
+<div style="display: none" class="container navDivs" id="playlistContainer">
+    <div class="container text-center">
+        <a class="btn btn-dark justify-content-center" type="button" href="/playlistCreate" style="font-family: MuseoModerno">Create Playlist</a>
+
+    </div>
+
+
+</div>
+<script>
+    function checkSelected(selected){
+        var allDivs = document.getElementsByClassName('navDivs');
+        console.log(allDivs);
+        console.log(selected);
+
+        for(var i=0; i<allDivs.length;i++){
+            allDivs[i].setAttribute('style', 'display:none');
+        }
+        if(selected==='Artists'){
+            document.getElementById('artistsContainer').setAttribute('style', 'display:block');
+            console.log('here1');
+        }
+        else if(selected==='Albums'){
+            document.getElementById('albumsContainer').setAttribute('style', 'display:block');
+            console.log('here2');
+        }
+        else if(selected==='Playlists'){
+            document.getElementById('playlistContainer').setAttribute('style', 'display:block');
+            console.log('here3');
+        }
+    }
+</script>
 </body>
 </html>
