--- a/src/main/resources/templates/playlistCreate.html
+++ b/src/main/resources/templates/playlistCreate.html
@@ -27,8 +27,7 @@
     <div id="searchedSongs">
 
     </div>
-    <form method="post" th:action="@{/createPlaylist}">
-
+    <form method="post">
         <div class="form-group">
             <label for="playlistName" style="font-family: MuseoModerno">Playlist name:</label>
             <input type="text" class="form-control" id="playlistName" required>
@@ -38,22 +37,13 @@
             <input type="text" class="form-control" id="playlistDescription">
         </div>
 
-        <div class="form-group">
-            <label for="playlistImage">Choose image: </label>
-            <input type="file" class="form-control-file" id="playlistImage">
-        </div>
-
-
         <div id="selectedSongs">
         </div>
-        <div class="container text-center">
-            <a class="btn btn-dark justify-content-center" type="submit" href="/playlistCreate" style="font-family: MuseoModerno">Create Playlist</a>
 
-        </div>
     </form>
-
-
-
+    <div class="container text-center">
+        <button class="btn btn-dark justify-content-center" onclick="submitPlaylist()" style="font-family: MuseoModerno">Create Playlist</button>
+    </div>
 
 </div>
 
@@ -90,7 +80,43 @@
         var element = document.getElementById(songId);
         element.parentNode.parentNode.removeChild(element.parentNode);
         var songBox  = document.getElementById("selectedSongs");
-        songBox.innerHTML += `<div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/${songId}?utm_source=generator" width="150px" height="50px" frameBorder="0" allowfullscreen="" allowallowFullScreenpboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>  <div> <input type="button" value="Remove Song" id="${songId}" onclick="removeSong(this.id)"></div>`;
+        songBox.innerHTML += `<div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/${songId}?utm_source=generator" width="150px" height="50px" frameBorder="0" allowfullscreen="" allowallowFullScreenpboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>  <input type="button" value="Remove Song" id="${songId}" onclick="removeSong(this.id)"></div>`;
+    }
+
+    function removeSong(songId) {
+        var element = document.getElementById(songId);
+        element.parentNode.parentNode.removeChild(element.parentNode);
+    }
+
+    function submitPlaylist() {
+        console.log("in here");
+        var requestBody = {};
+        requestBody["name"] = document.getElementById("playlistName").value;
+        requestBody["description"] = document.getElementById("playlistDescription").value;
+
+        requestBody["songIds"] = [];
+        var songs = document.getElementById("selectedSongs").children;
+        console.log(songs);
+        for (i =0 ; i<songs.length; i++){
+            console.log(songs);
+            console.log(songs[i])
+            console.log(songs[i].children[1]);
+            console.log(songs[i].children[1].id);
+
+            var song = songs[i].children[1].id;
+            requestBody["songIds"].push(song);
+        }
+
+        fetch(`/createPlaylist`, {
+            method: 'POST',
+            body: JSON.stringify(requestBody),
+            headers: {
+                'Content-Type': 'application/json',
+                'Accept': 'application/json',
+            },
+        }).then(res =>{
+            location.replace("profile");
+        })
     }
 </script>
 </body>
