--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -57,7 +57,7 @@
 </div>
 <div style="display: none" class="container navDivs" id="playlistContainer">
     <div class="container text-center">
-        <a class="btn btn-dark justify-content-center" type="button" href="/playlistCreate" style="font-family: MuseoModerno">Create Playlist</a>
+        <a class="btn btn-dark justify-content-center" type="button" href="/createPlaylist" style="font-family: MuseoModerno">Create Playlist</a>
 
     </div>
 
