--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -60,6 +60,13 @@
         <a class="btn btn-dark justify-content-center" type="button" href="/createPlaylist" style="font-family: MuseoModerno">Create Playlist</a>
 
     </div>
+    <div class="container text-center">
+        <ul th:each = "playlist : ${session.user.playlists}" class="mx-auto">
+            <li class="mx-auto">
+                <iframe style="border-radius:12px" th:src="'https://open.spotify.com/embed/playlist/' + ${playlist.id} +'?utm_source=generator'" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </li>
+        </ul>
+    </div>
 
 
 </div>
