--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -60,10 +60,12 @@
         <a class="btn btn-dark justify-content-center" type="button" href="/createPlaylist" style="font-family: MuseoModerno">Create Playlist</a>
 
     </div>
-    <div class="container text-center">
+    <div class="container text-center mt-5">
         <ul th:each = "playlist : ${session.user.playlists}" class="mx-auto">
             <li class="mx-auto">
-                <iframe style="border-radius:12px" th:src="'https://open.spotify.com/embed/playlist/' + ${playlist.id} +'?utm_source=generator'" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe style="border-radius:12px" th:src="'https://open.spotify.com/embed/playlist/' + ${playlist.id} +'?utm_source=generator'" width="25%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <a class="btn btn-dark justify-content-center" type="button" th:href="'/editPlaylist/' + ${playlist.id}" style="font-family: MuseoModerno">Edit Playlist</a>
+                <a class="btn btn-dark justify-content-center" type="button" href="/deletePlaylist" style="font-family: MuseoModerno">Delete Playlist</a>
             </li>
         </ul>
     </div>
@@ -81,15 +83,12 @@
         }
         if(selected==='Artists'){
             document.getElementById('artistsContainer').setAttribute('style', 'display:block');
-            console.log('here1');
         }
         else if(selected==='Albums'){
             document.getElementById('albumsContainer').setAttribute('style', 'display:block');
-            console.log('here2');
         }
         else if(selected==='Playlists'){
             document.getElementById('playlistContainer').setAttribute('style', 'display:block');
-            console.log('here3');
         }
     }
 </script>
